--- a/ui/about_box.ui
+++ b/ui/about_box.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>385</width>
-    <height>274</height>
+    <height>303</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -25,11 +25,14 @@
   <property name="windowOpacity">
    <double>1.000000000000000</double>
   </property>
+  <property name="sizeGripEnabled">
+   <bool>false</bool>
+  </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>240</y>
+     <y>260</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -44,10 +47,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>90</y>
-     <width>211</width>
-     <height>141</height>
+     <x>50</x>
+     <y>70</y>
+     <width>271</width>
+     <height>171</height>
     </rect>
    </property>
    <property name="text">
@@ -63,9 +66,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>10</x>
      <y>10</y>
-     <width>181</width>
+     <width>281</width>
      <height>61</height>
     </rect>
    </property>
