--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -22,7 +22,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -43,7 +43,7 @@
        <attribute name="title">
         <string>Tab 2</string>
        </attribute>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="gfxLabel">
         <property name="geometry">
          <rect>
           <x>10</x>
@@ -67,7 +67,7 @@
      <x>0</x>
      <y>0</y>
      <width>950</width>
-     <height>29</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
