--- a/ui/about_box.ui
+++ b/ui/about_box.ui
@@ -73,7 +73,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Z80 Emulator v0&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Powered by &lt;span style=&quot; font-style:italic;&quot;&gt;MegaBlaze Technology&lt;/span&gt;&lt;/p&gt;&lt;p&gt;© 2015 Badgersoft &lt;/p&gt;&lt;p&gt;AKA Crumpy Computing &lt;/p&gt;&lt;p&gt;AKA Cheese Dream Technologies&lt;/p&gt;&lt;p&gt;AKA DJ Dureaucrat &amp;amp; MC Red Tape&lt;/p&gt;&lt;p&gt;AKA Trilby Warriors&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Z80 Emulator v0&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Powered by &lt;span style=&quot; font-style:italic;&quot;&gt;MegaBlaze Technology&lt;/span&gt;&lt;/p&gt;&lt;p&gt;© 2015 Badgersoft &lt;/p&gt;&lt;p&gt;AKA Crumpy Computing &lt;/p&gt;&lt;p&gt;AKA Cheese Dream Technologies&lt;/p&gt;&lt;p&gt;AKA DJ Bureaucrat &amp;amp; MC Red Tape&lt;/p&gt;&lt;p&gt;AKA Trilby Warriors&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
  </widget>
