--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -22,7 +22,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -33,15 +33,15 @@
          <rect>
           <x>5</x>
           <y>0</y>
-          <width>771</width>
-          <height>361</height>
+          <width>581</width>
+          <height>341</height>
          </rect>
         </property>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
-        <string>Tab 2</string>
+        <string>Spectrum GFX</string>
        </attribute>
        <widget class="QLabel" name="gfxLabel">
         <property name="geometry">
@@ -54,6 +54,34 @@
         </property>
         <property name="text">
          <string>TextLabel</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="tab_3">
+       <attribute name="title">
+        <string>Scripting</string>
+       </attribute>
+       <widget class="QPushButton" name="runScriptButton">
+        <property name="geometry">
+         <rect>
+          <x>400</x>
+          <y>300</y>
+          <width>85</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Run</string>
+        </property>
+       </widget>
+       <widget class="QPlainTextEdit" name="scriptEdit">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>20</y>
+          <width>381</width>
+          <height>311</height>
+         </rect>
         </property>
        </widget>
       </widget>
@@ -653,6 +681,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>runScriptButton</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>executeScript()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>532</x>
+     <y>416</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>346</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>loadRom()</slot>
@@ -665,5 +709,6 @@
   <slot>print_debug_stats()</slot>
   <slot>resume()</slot>
   <slot>toggleScrollMemory(bool)</slot>
+  <slot>executeScript()</slot>
  </slots>
 </ui>
