--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -22,23 +22,8 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
-      <widget class="QWidget" name="tab">
-       <attribute name="title">
-        <string>Tab 1</string>
-       </attribute>
-       <widget class="QPlainTextEdit" name="plainTextEdit">
-        <property name="geometry">
-         <rect>
-          <x>5</x>
-          <y>0</y>
-          <width>581</width>
-          <height>341</height>
-         </rect>
-        </property>
-       </widget>
-      </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
         <string>Spectrum GFX</string>
@@ -53,7 +38,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>TextLabel</string>
+         <string/>
         </property>
        </widget>
       </widget>
@@ -64,8 +49,8 @@
        <widget class="QPushButton" name="runScriptButton">
         <property name="geometry">
          <rect>
-          <x>400</x>
-          <y>300</y>
+          <x>520</x>
+          <y>310</y>
           <width>85</width>
           <height>27</height>
          </rect>
@@ -78,9 +63,9 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>20</y>
-          <width>381</width>
-          <height>311</height>
+          <y>10</y>
+          <width>411</width>
+          <height>321</height>
          </rect>
         </property>
        </widget>
