Add functionality for loading/saving scripts

--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -8,7 +8,7 @@
     <x>0</x>
     <y>0</y>
     <width>950</width>
-    <height>694</height>
+    <height>696</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
@@ -79,6 +79,16 @@
          </rect>
         </property>
        </widget>
+       <widget class="QPlainTextEdit" name="scriptOutput">
+        <property name="geometry">
+         <rect>
+          <x>430</x>
+          <y>10</y>
+          <width>381</width>
+          <height>281</height>
+         </rect>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
@@ -90,7 +100,7 @@
      <x>0</x>
      <y>0</y>
      <width>950</width>
-     <height>23</height>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -132,9 +142,17 @@
     </property>
     <addaction name="actionScroll_memory_with_PC"/>
    </widget>
+   <widget class="QMenu" name="menuScripting">
+    <property name="title">
+     <string>Scripti&amp;ng</string>
+    </property>
+    <addaction name="actionSaveScript"/>
+    <addaction name="actionLoadScript"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEmu_Control"/>
    <addaction name="menuView"/>
+   <addaction name="menuScripting"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -511,6 +529,16 @@
     <string>&amp;Scroll memory with PC</string>
    </property>
   </action>
+  <action name="actionSaveScript">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionLoadScript">
+   <property name="text">
+    <string>Load</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="resources/app.qrc"/>
@@ -692,6 +720,38 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionSaveScript</sender>
+   <signal>triggered(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>saveScript()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>347</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionLoadScript</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>loadScript()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>347</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>loadRom()</slot>
@@ -705,5 +765,7 @@
   <slot>resume()</slot>
   <slot>toggleScrollMemory(bool)</slot>
   <slot>executeScript()</slot>
+  <slot>saveScript()</slot>
+  <slot>loadScript()</slot>
  </slots>
 </ui>
