--- a/ui/about_box.ui
+++ b/ui/about_box.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>385</width>
-    <height>476</height>
+    <width>370</width>
+    <height>313</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -31,8 +31,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>430</y>
+     <x>20</x>
+     <y>270</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -48,7 +48,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>220</y>
+     <y>80</y>
      <width>271</width>
      <height>171</height>
     </rect>
@@ -69,11 +69,11 @@
      <x>10</x>
      <y>10</y>
      <width>371</width>
-     <height>191</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Z80 Emulator v0&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Powered by &lt;span style=&quot; font-style:italic;&quot;&gt;MegaBlaze Technology&lt;/span&gt;&lt;/p&gt;&lt;p&gt;© 2015 Badgersoft &lt;/p&gt;&lt;p&gt;AKA Crumpy Computing &lt;/p&gt;&lt;p&gt;AKA Cheese Dream Technologies&lt;/p&gt;&lt;p&gt;AKA DJ Bureaucrat &amp;amp; MC Red Tape&lt;/p&gt;&lt;p&gt;AKA Trilby Warriors&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Z80 Emulator v0&lt;/span&gt;&lt;/p&gt;&lt;p&gt;© 2015 Badgersoft&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
  </widget>
