--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -105,7 +105,7 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>Fi&amp;le</string>
+     <string>&amp;File</string>
     </property>
     <widget class="QMenu" name="menuRecent">
      <property name="title">
@@ -123,7 +123,7 @@
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>Help</string>
+     <string>&amp;Help</string>
     </property>
     <addaction name="actionAbout"/>
    </widget>
@@ -138,13 +138,13 @@
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
-     <string>View</string>
+     <string>&amp;View</string>
     </property>
     <addaction name="actionScroll_memory_with_PC"/>
    </widget>
    <widget class="QMenu" name="menuScripting">
     <property name="title">
-     <string>Scripti&amp;ng</string>
+     <string>&amp;Scripting</string>
     </property>
     <addaction name="actionLoadScript"/>
     <addaction name="actionSave"/>
@@ -542,7 +542,7 @@
   </action>
   <action name="actionSave">
    <property name="text">
-    <string>Save</string>
+    <string>Sa&amp;ve</string>
    </property>
   </action>
  </widget>
